# editor

./: .rustfmt.toml  Cargo.toml  README.md  flake.nix
src/: action.rs  app.rs  buffer.rs  handler.rs  lib.rs  logger.rs  main.rs  tui.rs  ui.rs
src/action/: delta.rs
src/ui/: widgets.rs
tests/: cursor.rs  delete_line.rs  file_operations.rs  mod.rs
tests/helpers/: mod.rs
tests/helpers/mock_files/: basic.txt  single_line.txt  sparse.txt
tests/io/: file_load.rs  mod.rs
tests/mocks/: basic.txt  sparse.txt  static
tests/mode_change/: from_delete.rs  from_goto.rs  from_insert.rs  from_normal.rs  mod.rs
tests/movements/: file_end.rs  mod.rs  move_down.rs  move_end_of_line.rs  move_next_long_word_start.rs  move_next_word_start.rs  move_prev_word_start.rs  move_right.rs  move_start_of_file.rs  move_start_of_line.rs  move_up.rs
tests/movements/by_direction/: left.rs  mod.rs  right.rs
tests/movements/by_word/: backward_short_start.rs  forward_long_end.rs  forward_short_end.rs  mod.rs
tests/text_change/: insert_text.rs  mod.rs
tests/text_change/delete/: lines.rs  mod.rs
tests/text_change/delete/by_word/: backward_short_start.rs  forwards_short_start.rs  mod.rs
tests/text_delta/: delete_lines.rs  insert_text.rs
