[package]
name = "editor"
version = "0.2.0"
authors = ["Daniel Cox <63171098+dan-kc@users.noreply.github.com>"]
license = "MIT"
edition = "2021"

[dependencies]
chrono = "0.4.37"
crop = "0.4.2"
crossterm = "0.27.0"
ratatui = "0.26.0"
rusqlite = "0.31.0"
uuid = { version = "1.8.0", features = ["v4"] }
